terraform/vpc.tf
resource "aws_vpc" "devops" {
  cidr_block = "10.0.0.0/24"

  tags = {
    Name = "devops-vpc"
  }
}
